updates for filters

--- a/src/app/product-refinements/product-refinements.component.html
+++ b/src/app/product-refinements/product-refinements.component.html
@@ -2,21 +2,27 @@
 
 <ng-container *ngFor="let item of refinements" [ngSwitch]="item.type">
 
-<!--  <ng-container *ngSwitchCase="'list'">-->
-  <ng-container *ngSwitchDefault>
-    <h2>{{item.title | titlecase }}</h2>
-    <ais-refinement-list
-      attribute="{{item.config.attribute}}"
-      [transformItems]="transformItems"
-      [showMore]="item.config.showMore || true"
-      [searchable]="item.config.searchable || true"
-      [limit]="item.config.limit || 5"
-      [showMoreLimit]="item.config.showMoreLimit || 40"
-      [autoHideContainer]="item.config.autoHideContainer || false"
+  <h2>{{item.title | titlecase }}</h2>
 
-      showMoreLabel="Show More +"
-      showLessLabel="Show Less -"
-    ></ais-refinement-list>
-  </ng-container>
+  <ais-toggle
+    *ngSwitchCase="'toggle'"
+    attribute="{{item.config.attribute}}"
+    label="{{item.config.label}}"
+  ></ais-toggle>
+
+  <ais-refinement-list
+    *ngSwitchDefault
+    attribute="{{item.config.attribute}}"
+    [transformItems]="transformItems"
+    [showMore]="item.config.showMore || true"
+    [searchable]="item.config.searchable || true"
+    [limit]="item.config.limit || 5"
+    [showMoreLimit]="item.config.showMoreLimit || 40"
+    [autoHideContainer]="item.config.autoHideContainer || false"
+
+    showMoreLabel="Show More +"
+    showLessLabel="Show Less -"
+  ></ais-refinement-list>
+
 
 </ng-container>
