reformat of modules

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,31 +6,9 @@
     ></ais-current-refinements>
   </nav>
 
-  <aside class="search-categories">
-    <ais-clear-refinements></ais-clear-refinements>
-    <app-product-refinements></app-product-refinements>
-  </aside>
+  <app-product-refinements class="search-categories"></app-product-refinements>
 
-  <main class="search-main">
-    <ais-sort-by
-      [items]="[
-    { value: 'ProductSiteWarehouseCatalog', label: 'Best Match' },
-    { value: 'SortByNameA-Z Virtual', label: 'Name asc' },
-    { value: 'SortByNameZ-A Virtual', label: 'Name des' },
-    { value: 'SalesYOY', label: 'SalesYOY' },
-  ]"
-    ></ais-sort-by>
-
-    <ais-hits class="search-hits">
-      <ng-template let-hits="hits">
-        <app-hit *ngFor="let hit of hits" [hit]="hit"></app-hit>
-      </ng-template>
-    </ais-hits>
-
-    <ais-pagination class="pagination"></ais-pagination>
-  </main>
-
-
+  <app-hit-section class="search-main"></app-hit-section>
 
   <footer class="footer"></footer>
 </ais-instantsearch>
