--- a/src/app/hit/hit.component.scss
+++ b/src/app/hit/hit.component.scss
@@ -1,7 +1,9 @@
+@import "core";
+
 :host {
   display: grid;
   border-bottom: solid 1px rgba(0, 0, 0, 0.15);
-  grid-template-columns: 144px auto;
+  grid-template-columns: 144px auto 200px;
   grid-column-gap: 16px;
   align-items: center;
 
@@ -16,6 +18,7 @@
     margin: 12px 0 9px;
     background: aliceblue;
   }
+
 
   .name,
   .props,
@@ -48,6 +51,53 @@
 
   .separator {
     margin: 0 1em;
+  }
+
+  .price {
+    height: 100%;
+    display: inline-grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: 48px 30px;
+    padding: 0 38px;
+    align-content: center;
+    justify-content: center;
+
+    &-label,
+    &-unit {
+      line-height: normal;
+      text-transform: capitalize;
+      display: block;
+    }
+
+    &-label {
+      //grid-area: label;
+      font-size: 12px;
+      color: #757575;
+    }
+
+    &-unit {
+      font-size: 13px;
+      line-height: 18px;
+      font-weight: bold;
+    }
+
+    &-button {
+      //grid-area: button;
+      height: 30px;
+      width: 125px;
+      border-radius: 3px;
+      background-color: #a11e22;
+      font-size: 12px;
+      font-weight: normal;
+      font-stretch: normal;
+      font-style: normal;
+      line-height: normal;
+      letter-spacing: normal;
+      text-align: center;
+      color: $white;
+      border: none;
+      grid-column: 1/-1;
+    }
   }
 }
 
