--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,9 @@
     "categories main"
     "categories pagination"
     "footer footer";
+  width: min(100%, 1024px);
+  margin: 0 auto;
+  border: solid 1px rgba(0,0,0,.15);
 
   &-categories {
     grid-area: categories;
