faceted search beginings

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
   <app-main-nav class="search-main-nav"></app-main-nav>
   <app-product-refinements class="search-categories"></app-product-refinements>
   <app-hit-section class="search-main"></app-hit-section>
-  <footer class="footer"></footer>
+  <footer class="search-footer"></footer>
 </ais-instantsearch>
 
 
