--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -12,37 +12,25 @@
   width: min(100%, 1024px);
   margin: 0 auto;
   border: solid 1px rgba(0,0,0,.15);
+  background: $white;
 
   &-categories {
     grid-area: categories;
-    border-right: solid 1px rgba(0, 0, 0, 0.15);
-    padding: 30px 15px 30px 20px;
   }
 
   &-main {
     grid-area: main;
-    padding: 20px 22px 50px 22px;
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: auto auto auto;
-    grid-template-areas:
-    "search-hits-nav"
-    "search-hits "
-    "pagination"
-  }
-
-  &-main-nav,
-  .footer {
-
   }
 
   &-main-nav  {
     grid-area: main-nav;
   }
+
+  &-footer {
+    grid-area: footer;
+    padding: 21px;
+    background: $black;
+  }
 }
 
-.footer {
-  grid-area: footer;
-  padding: 21px;
-  background: $black;
-}
+
