--- a/src/app/hit/hit-section/hit-section.component.scss
+++ b/src/app/hit/hit-section/hit-section.component.scss
@@ -1,6 +1,15 @@
 @import "core";
 
 :host ::ng-deep {
+  padding: 20px 22px 50px 22px;
+  display: grid;
+  grid-template-columns: auto;
+  grid-template-rows: auto auto auto;
+  grid-template-areas:
+    "search-hits-nav"
+    "search-hits"
+    "pagination";
+
   .search-hits {
     grid-area: search-hits;
 
