--- a/src/app/product-refinements/product-refinements.component.scss
+++ b/src/app/product-refinements/product-refinements.component.scss
@@ -1,6 +1,9 @@
 @import "core";
 
 :host ::ng-deep {
+  border-right: solid 1px rgba(0, 0, 0, 0.15);
+  padding: 30px 15px 30px 20px;
+
   h1 {
     margin: 46px 28px 11px 0;
     font-size: 22px;
