--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,7 +32,7 @@ body {
 
   @each $breakpoint, $size in $mq-breakpoints {
     @include mq(#{$breakpoint}) {
-      font-size: vw(16, $size);
+      font-size: 16px;
     }
   }
 }
@@ -46,5 +46,30 @@ body {
   margin: 0;
   font-family: Ubuntu, sans-serif;
   background: $light-gray;
+
+
+    .ais-NumericMenu-label,
+    .ais-ToggleRefinement-label,
+    .ais-HierarchicalMenu-item,
+    .ais-Menu-item,
+    .ais-RatingMenu-item,
+    .ais-RefinementList-item,
+    .ais-HierarchicalMenu-showMore,
+    .ais-Menu-showMore,
+    .ais-RefinementList-showMore,
+    .ais-ClearRefinements-button,
+    .ais-InfiniteHits-loadMore,
+    .ais-RangeInput-submit,
+    .ais-InfiniteHits-loadPrevious,
+    .ais-Pagination-link,
+    .ais-GeoSearch-redo,
+    .ais-GeoSearch-reset,
+    .ais-VoiceSearch-button,
+    .ais-SearchBox-input,
+    .ais-RangeInput-input
+    {
+      color: $charcoal-black;
+    }
+
 }
 
