--- a/src/app/hit/hit-section/hit-section.component.html
+++ b/src/app/hit/hit-section/hit-section.component.html
@@ -1,4 +1,11 @@
 <nav class="search-hits-nav">
+  <ais-stats>
+    <ng-template let-state="state">
+      Displaying {{state.hitsPerPage}} of <strong>{{state.nbHits}}</strong> products
+      in {{state.processingTimeMS}}ms.
+    </ng-template>
+  </ais-stats>
+
   <ais-sort-by
     [items]="[
     { value: 'ProductSiteWarehouseCatalog', label: 'Best Match' },
