--- a/src/app/hit/hit-section/hit-section.component.html
+++ b/src/app/hit/hit-section/hit-section.component.html
@@ -1,8 +1,9 @@
 <nav class="search-hits-nav">
   <ais-stats>
     <ng-template let-state="state">
-      Displaying {{state.hitsPerPage}} of <strong>{{state.nbHits}}</strong> products
-      in {{state.processingTimeMS}}ms.
+      Displaying
+      {{state.hitsPerPage}}
+      of <strong>{{state.nbHits}}</strong> products in {{state.processingTimeMS}}ms.
     </ng-template>
   </ais-stats>
 
